--- a/src/output.css
+++ b/src/output.css
@@ -8,7 +8,6 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-500: oklch(63.7% 0.237 25.331);
-    --color-gray-200: oklch(92.8% 0.006 264.531);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -27,7 +26,9 @@
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
     --font-weight-black: 900;
+    --tracking-tight: -0.025em;
     --radius-lg: 0.5rem;
+    --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
@@ -191,17 +192,32 @@
   .relative {
     position: relative;
   }
+  .sticky {
+    position: sticky;
+  }
+  .top-0 {
+    top: calc(var(--spacing) * 0);
+  }
   .top-1 {
     top: calc(var(--spacing) * 1);
   }
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
+  .top-10 {
+    top: calc(var(--spacing) * 10);
+  }
+  .top-\[10px\] {
+    top: 10px;
+  }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
   .right-2 {
     right: calc(var(--spacing) * 2);
+  }
+  .right-4 {
+    right: calc(var(--spacing) * 4);
   }
   .right-\[10px\] {
     right: 10px;
@@ -224,20 +240,17 @@
   .left-2 {
     left: calc(var(--spacing) * 2);
   }
-  .m-4 {
-    margin: calc(var(--spacing) * 4);
+  .left-4 {
+    left: calc(var(--spacing) * 4);
   }
-  .m-8 {
-    margin: calc(var(--spacing) * 8);
-  }
-  .m-15 {
-    margin: calc(var(--spacing) * 15);
-  }
-  .m-16 {
-    margin: calc(var(--spacing) * 16);
+  .z-10 {
+    z-index: 10;
   }
   .m-18 {
     margin: calc(var(--spacing) * 18);
+  }
+  .mx-12 {
+    margin-inline: calc(var(--spacing) * 12);
   }
   .mx-auto {
     margin-inline: auto;
@@ -248,6 +261,15 @@
   .my-8 {
     margin-block: calc(var(--spacing) * 8);
   }
+  .my-12 {
+    margin-block: calc(var(--spacing) * 12);
+  }
+  .my-20 {
+    margin-block: calc(var(--spacing) * 20);
+  }
+  .my-50 {
+    margin-block: calc(var(--spacing) * 50);
+  }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
   }
@@ -256,6 +278,9 @@
   }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
+  }
+  .mt-20 {
+    margin-top: calc(var(--spacing) * 20);
   }
   .mb-1 {
     margin-bottom: calc(var(--spacing) * 1);
@@ -269,6 +294,9 @@
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
+  .mb-6 {
+    margin-bottom: calc(var(--spacing) * 6);
+  }
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
   }
@@ -278,14 +306,8 @@
   .mb-20 {
     margin-bottom: calc(var(--spacing) * 20);
   }
-  .mb-\[3\] {
-    margin-bottom: 3;
-  }
   .mb-\[10px\] {
     margin-bottom: 10px;
-  }
-  .mb-\[30p\] {
-    margin-bottom: 30p;
   }
   .mb-\[30px\] {
     margin-bottom: 30px;
@@ -335,29 +357,8 @@
   .w-22 {
     width: calc(var(--spacing) * 22);
   }
-  .w-\[6\%\] {
-    width: 6%;
-  }
-  .w-\[50\%\] {
-    width: 50%;
-  }
-  .w-\[52\%\] {
-    width: 52%;
-  }
-  .w-\[55\%\] {
-    width: 55%;
-  }
-  .w-\[58\%\] {
-    width: 58%;
-  }
-  .w-\[60\%\] {
-    width: 60%;
-  }
   .w-\[100\%\] {
     width: 100%;
-  }
-  .w-\[100\] {
-    width: 100;
   }
   .w-auto {
     width: auto;
@@ -365,11 +366,17 @@
   .w-full {
     width: 100%;
   }
+  .max-w-600 {
+    max-width: calc(var(--spacing) * 600);
+  }
   .max-w-\[440px\] {
     max-width: 440px;
   }
   .max-w-\[480px\] {
     max-width: 480px;
+  }
+  .max-w-\[600px\] {
+    max-width: 600px;
   }
   .max-w-\[620px\] {
     max-width: 620px;
@@ -382,6 +389,12 @@
   }
   .max-w-\[1214px\] {
     max-width: 1214px;
+  }
+  .max-w-\[1240px\] {
+    max-width: 1240px;
+  }
+  .max-w-\[1248px\] {
+    max-width: 1248px;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -426,17 +439,8 @@
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
-  .grid-cols-\[3\] {
-    grid-template-columns: 3;
-  }
-  .grid-cols-\[30\%\] {
-    grid-template-columns: 30%;
-  }
-  .grid-cols-\[30\%_\] {
-    grid-template-columns: 30% ;
-  }
-  .grid-cols-\[30\%_auto\] {
-    grid-template-columns: 30% auto;
+  .grid-cols-\[20\%_auto\] {
+    grid-template-columns: 20% auto;
   }
   .flex-col {
     flex-direction: column;
@@ -446,9 +450,6 @@
   }
   .items-start {
     align-items: flex-start;
-  }
-  .justify-between {
-    justify-content: space-between;
   }
   .justify-center {
     justify-content: center;
@@ -504,14 +505,6 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-1 {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
-  }
-  .border-\[2px\] {
-    border-style: var(--tw-border-style);
-    border-width: 2px;
-  }
   .border-t {
     border-top-style: var(--tw-border-style);
     border-top-width: 1px;
@@ -542,9 +535,6 @@
   .border-\[\#ccc\] {
     border-color: #ccc;
   }
-  .border-gray-200 {
-    border-color: var(--color-gray-200);
-  }
   .border-white {
     border-color: var(--color-white);
   }
@@ -568,6 +558,9 @@
   }
   .bg-\[\#f3f3f3\] {
     background-color: #f3f3f3;
+  }
+  .bg-\[\#fafafa\] {
+    background-color: #fafafa;
   }
   .bg-\[rgba\(0\,0\,0\,0\.5\)\] {
     background-color: rgba(0,0,0,0.5);
@@ -641,23 +634,17 @@
   .p-2 {
     padding: calc(var(--spacing) * 2);
   }
-  .p-3 {
-    padding: calc(var(--spacing) * 3);
-  }
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
   .p-6 {
     padding: calc(var(--spacing) * 6);
   }
+  .p-12 {
+    padding: calc(var(--spacing) * 12);
+  }
   .p-14 {
     padding: calc(var(--spacing) * 14);
-  }
-  .p-\[1px_95px\] {
-    padding: 1px 95px;
-  }
-  .p-\[2px\] {
-    padding: 2px;
   }
   .p-\[4px_40px\] {
     padding: 4px 40px;
@@ -668,23 +655,14 @@
   .p-\[6px_8px\] {
     padding: 6px 8px;
   }
-  .p-\[8px\] {
-    padding: 8px;
-  }
-  .p-\[8px_1\] {
-    padding: 8px 1;
-  }
-  .p-\[8px_12\] {
-    padding: 8px 12;
-  }
   .p-\[8px_12px\] {
     padding: 8px 12px;
   }
   .p-\[8px_50px\] {
     padding: 8px 50px;
   }
-  .p-\[8px_\] {
-    padding: 8px ;
+  .p-\[9px_16px_9px_56px\] {
+    padding: 9px 16px 9px 56px;
   }
   .p-\[10px\] {
     padding: 10px;
@@ -692,23 +670,56 @@
   .p-\[12px\] {
     padding: 12px;
   }
-  .p-\[12px_50px\] {
-    padding: 12px 50px;
+  .p-\[12px_4px\] {
+    padding: 12px 4px;
   }
-  .p-\[12px_80px\] {
-    padding: 12px 80px;
+  .p-\[12px_16px\] {
+    padding: 12px 16px;
   }
-  .p-\[12px_95px\] {
-    padding: 12px 95px;
+  .p-\[12px_24px\] {
+    padding: 12px 24px;
+  }
+  .p-\[12px_48px\] {
+    padding: 12px 48px;
+  }
+  .p-\[12px_60px\] {
+    padding: 12px 60px;
+  }
+  .p-\[12px_70px\] {
+    padding: 12px 70px;
+  }
+  .p-\[12px_\] {
+    padding: 12px ;
   }
   .p-\[20px\] {
     padding: 20px;
   }
+  .p-\[24px_8px\] {
+    padding: 24px 8px;
+  }
+  .p-\[24px_16px\] {
+    padding: 24px 16px;
+  }
+  .p-\[24px_56px\] {
+    padding: 24px 56px;
+  }
+  .p-\[24px_72px\] {
+    padding: 24px 72px;
+  }
+  .p-\[24px_px\] {
+    padding: 24px px;
+  }
   .p-\[40px\] {
     padding: 40px;
   }
-  .p-\[px_50px\] {
-    padding: px 50px;
+  .px-1 {
+    padding-inline: calc(var(--spacing) * 1);
+  }
+  .px-2 {
+    padding-inline: calc(var(--spacing) * 2);
+  }
+  .px-3 {
+    padding-inline: calc(var(--spacing) * 3);
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
@@ -722,8 +733,14 @@
   .px-9 {
     padding-inline: calc(var(--spacing) * 9);
   }
+  .px-12 {
+    padding-inline: calc(var(--spacing) * 12);
+  }
   .px-\[12px\] {
     padding-inline: 12px;
+  }
+  .px-\[56px\] {
+    padding-inline: 56px;
   }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
@@ -731,14 +748,41 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
+  .py-12 {
+    padding-block: calc(var(--spacing) * 12);
+  }
   .py-14 {
     padding-block: calc(var(--spacing) * 14);
+  }
+  .py-50 {
+    padding-block: calc(var(--spacing) * 50);
+  }
+  .py-\[1px\] {
+    padding-block: 1px;
+  }
+  .py-\[16px\] {
+    padding-block: 16px;
   }
   .py-\[17px\] {
     padding-block: 17px;
   }
+  .py-\[18px\] {
+    padding-block: 18px;
+  }
   .py-\[50px\] {
     padding-block: 50px;
+  }
+  .py-\[186px\] {
+    padding-block: 186px;
+  }
+  .py-\[190px\] {
+    padding-block: 190px;
+  }
+  .py-\[200px\] {
+    padding-block: 200px;
+  }
+  .pt-4 {
+    padding-top: calc(var(--spacing) * 4);
   }
   .pt-5 {
     padding-top: calc(var(--spacing) * 5);
@@ -752,8 +796,17 @@
   .pt-10 {
     padding-top: calc(var(--spacing) * 10);
   }
+  .pt-12 {
+    padding-top: calc(var(--spacing) * 12);
+  }
   .pt-15 {
     padding-top: calc(var(--spacing) * 15);
+  }
+  .pt-\[190px\] {
+    padding-top: 190px;
+  }
+  .pt-\[200px\] {
+    padding-top: 200px;
   }
   .pr-\[20px\] {
     padding-right: 20px;
@@ -764,11 +817,20 @@
   .pb-3 {
     padding-bottom: calc(var(--spacing) * 3);
   }
+  .pb-4 {
+    padding-bottom: calc(var(--spacing) * 4);
+  }
+  .pb-6 {
+    padding-bottom: calc(var(--spacing) * 6);
+  }
   .pb-8 {
     padding-bottom: calc(var(--spacing) * 8);
   }
   .pb-10 {
     padding-bottom: calc(var(--spacing) * 10);
+  }
+  .pb-12 {
+    padding-bottom: calc(var(--spacing) * 12);
   }
   .pb-25 {
     padding-bottom: calc(var(--spacing) * 25);
@@ -779,8 +841,8 @@
   .pb-\[50px\] {
     padding-bottom: 50px;
   }
-  .\[text-align\:left\] {
-    text-align: left;
+  .pb-\[150px\] {
+    padding-bottom: 150px;
   }
   .text-center {
     text-align: center;
@@ -802,6 +864,21 @@
   .text-\[1\.2rem\] {
     font-size: 1.2rem;
   }
+  .text-\[1\.3rem\] {
+    font-size: 1.3rem;
+  }
+  .text-\[1\.5rem\] {
+    font-size: 1.5rem;
+  }
+  .text-\[1\.125rem\] {
+    font-size: 1.125rem;
+  }
+  .text-\[1px\] {
+    font-size: 1px;
+  }
+  .text-\[1rem\] {
+    font-size: 1rem;
+  }
   .text-\[2\.5rem\] {
     font-size: 2.5rem;
   }
@@ -813,9 +890,6 @@
   }
   .text-\[8px\] {
     font-size: 8px;
-  }
-  .text-\[12px\] {
-    font-size: 12px;
   }
   .text-\[13px\] {
     font-size: 13px;
@@ -844,30 +918,11 @@
   .text-\[25px\] {
     font-size: 25px;
   }
-  .text-\[30px\] {
-    font-size: 30px;
-  }
-  .text-\[31px\] {
-    font-size: 31px;
-  }
   .text-\[32px\] {
     font-size: 32px;
   }
-  .text-\[33px\] {
-    font-size: 33px;
-  }
-  .text-\[34px\] {
-    font-size: 34px;
-  }
-  .text-\[36px\] {
-    font-size: 36px;
-  }
   .text-\[40px\] {
     font-size: 40px;
-  }
-  .leading-6 {
-    --tw-leading: calc(var(--spacing) * 6);
-    line-height: calc(var(--spacing) * 6);
   }
   .leading-8 {
     --tw-leading: calc(var(--spacing) * 8);
@@ -876,14 +931,6 @@
   .font-\[700\] {
     --tw-font-weight: 700;
     font-weight: 700;
-  }
-  .font-\[800\] {
-    --tw-font-weight: 800;
-    font-weight: 800;
-  }
-  .font-black {
-    --tw-font-weight: var(--font-weight-black);
-    font-weight: var(--font-weight-black);
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
@@ -897,6 +944,10 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
+  .tracking-tight {
+    --tw-tracking: var(--tracking-tight);
+    letter-spacing: var(--tracking-tight);
+  }
   .whitespace-nowrap {
     white-space: nowrap;
   }
@@ -909,11 +960,17 @@
   .text-\[\#ccc\] {
     color: #ccc;
   }
+  .text-\[1\.rem\] {
+    color: 1.rem;
+  }
   .text-\[blue\] {
     color: blue;
   }
   .text-\[px\] {
     color: px;
+  }
+  .text-\[rgba\(0\,0\,0\,0\.7\)\] {
+    color: rgba(0,0,0,0.7);
   }
   .text-black {
     color: var(--color-black);
@@ -935,10 +992,18 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
+  .transition {
+    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
   .transition-colors {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
+  .delay-50 {
+    transition-delay: 50ms;
   }
   .duration-200 {
     --tw-duration: 200ms;
@@ -948,14 +1013,19 @@
     --tw-duration: 300ms;
     transition-duration: 300ms;
   }
-  .\[direction\:ltr\] {
-    direction: ltr;
-  }
-  .\[text-align-last\:left\] {
-    text-align-last: left;
+  .ease-in-out {
+    --tw-ease: var(--ease-in-out);
+    transition-timing-function: var(--ease-in-out);
   }
   .\[text-shadow\:_-2px_-2px_0_\#fff\,_2px_-2px_0_\#fff\,_-2px_2px_0_\#fff\,_2px_2px_0_\#fff\] {
     text-shadow:  -2px -2px 0 #fff, 2px -2px 0 #fff, -2px 2px 0 #fff, 2px 2px 0 #fff;
+  }
+  .group-hover\:animate-\[bounce_0\.5s_ease-in-out_2\] {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        animation: bounce 0.5s ease-in-out 2;
+      }
+    }
   }
   .group-hover\:bg-\[\#838383\] {
     &:is(:where(.group):hover *) {
@@ -978,50 +1048,41 @@
       }
     }
   }
+  .group-hover\:underline {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        text-decoration-line: underline;
+      }
+    }
+  }
+  .placeholder\:text-\[17px\] {
+    &::placeholder {
+      font-size: 17px;
+    }
+  }
   .placeholder\:text-\[\#ccc\] {
     &::placeholder {
       color: #ccc;
     }
   }
-  .hover\:rounded {
-    &:hover {
-      @media (hover: hover) {
-        border-radius: 0.25rem;
-      }
+  .after\:content-\[\'\,\'\] {
+    &::after {
+      content: var(--tw-content);
+      --tw-content: ',';
+      content: var(--tw-content);
     }
   }
-  .hover\:rounded-\[5px\] {
-    &:hover {
-      @media (hover: hover) {
-        border-radius: 5px;
-      }
-    }
-  }
-  .hover\:rounded-\[50px\] {
-    &:hover {
-      @media (hover: hover) {
-        border-radius: 50px;
-      }
+  .after\:content-\[\'\:\'\] {
+    &::after {
+      content: var(--tw-content);
+      --tw-content: ':';
+      content: var(--tw-content);
     }
   }
   .hover\:bg-\[\#4E4E4E\] {
     &:hover {
       @media (hover: hover) {
         background-color: #4E4E4E;
-      }
-    }
-  }
-  .hover\:bg-\[\#838383\] {
-    &:hover {
-      @media (hover: hover) {
-        background-color: #838383;
-      }
-    }
-  }
-  .hover\:bg-\[\#\] {
-    &:hover {
-      @media (hover: hover) {
-        background-color: #;
       }
     }
   }
@@ -1039,10 +1100,10 @@
       }
     }
   }
-  .hover\:text-white {
+  .hover\:text-black {
     &:hover {
       @media (hover: hover) {
-        color: var(--color-white);
+        color: var(--color-black);
       }
     }
   }
@@ -1124,11 +1185,6 @@
       display: none;
     }
   }
-  .sm\:w-\[58\%\] {
-    @media (width >= 601px) {
-      width: 58%;
-    }
-  }
   .sm\:grid-cols-2 {
     @media (width >= 601px) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1137,11 +1193,6 @@
   .sm\:grid-cols-3 {
     @media (width >= 601px) {
       grid-template-columns: repeat(3, minmax(0, 1fr));
-    }
-  }
-  .sm\:grid-cols-\[30\%_auto\] {
-    @media (width >= 601px) {
-      grid-template-columns: 30% auto;
     }
   }
   .sm\:grid-cols-\[75\%_auto\] {
@@ -1305,6 +1356,28 @@
     }
   }
 }
+@layer utilities {
+  .bg-custom-radial {
+    --bg-gradient: radial-gradient(300% 100% at center top, rgba(169, 185, 250, 0.15) 0%, rgba(251, 251, 251, 0) 25%);
+    background-image: var(--bg-gradient);
+  }
+  .bg-border-radial {
+    --border-gradient: radial-gradient(at left, #e50e19 50%, #5c79f1 100%);
+    border-image: var(--border-gradient) 1;
+    border-style: solid;
+    border-width: 3px;
+  }
+}
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(-50%);
+    animation-timing-function: cubic-bezier(0.5, 0, 1, 1);
+  }
+  50% {
+    transform: translateY(0);
+    animation-timing-function: cubic-bezier(0, 0, 0.5, 1);
+  }
+}
 @property --tw-translate-x {
   syntax: "*";
   inherits: false;
@@ -1410,6 +1483,10 @@
   syntax: "*";
   inherits: false;
 }
+@property --tw-tracking {
+  syntax: "*";
+  inherits: false;
+}
 @property --tw-shadow {
   syntax: "*";
   inherits: false;
@@ -1484,6 +1561,25 @@
   syntax: "*";
   inherits: false;
 }
+@property --tw-ease {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-content {
+  syntax: "*";
+  initial-value: "";
+  inherits: false;
+}
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(-25%);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+  }
+  50% {
+    transform: none;
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -1510,6 +1606,7 @@
       --tw-gradient-to-position: 100%;
       --tw-leading: initial;
       --tw-font-weight: initial;
+      --tw-tracking: initial;
       --tw-shadow: 0 0 #0000;
       --tw-shadow-color: initial;
       --tw-shadow-alpha: 100%;
@@ -1526,6 +1623,8 @@
       --tw-ring-offset-shadow: 0 0 #0000;
       --tw-outline-style: solid;
       --tw-duration: initial;
+      --tw-ease: initial;
+      --tw-content: "";
     }
   }
 }
