Fix search bar of helpcenter.html

--- a/src/output.css
+++ b/src/output.css
@@ -204,26 +204,11 @@
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
-  .top-10 {
-    top: calc(var(--spacing) * 10);
-  }
-  .top-\[0px\] {
-    top: 0px;
-  }
-  .top-\[20px\] {
-    top: 20px;
-  }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
-  .right-1 {
-    right: calc(var(--spacing) * 1);
-  }
   .right-2 {
     right: calc(var(--spacing) * 2);
-  }
-  .right-4 {
-    right: calc(var(--spacing) * 4);
   }
   .right-\[10px\] {
     right: 10px;
@@ -249,20 +234,14 @@
   .left-4 {
     left: calc(var(--spacing) * 4);
   }
-  .z-1 {
-    z-index: 1;
-  }
   .z-10 {
     z-index: 10;
   }
   .z-50 {
     z-index: 50;
   }
-  .z-1000 {
+  .z-\[1000\] {
     z-index: 1000;
-  }
-  .z-\[-1\] {
-    z-index: -1;
   }
   .m-18 {
     margin: calc(var(--spacing) * 18);
@@ -430,29 +409,11 @@
   .appearance-none {
     appearance: none;
   }
-  .grid-flow-col {
-    grid-auto-flow: column;
-  }
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-  .grid-cols-\[0\%_auto\] {
-    grid-template-columns: 0% auto;
-  }
-  .grid-cols-\[20\%_auto\] {
-    grid-template-columns: 20% auto;
-  }
-  .grid-cols-\[30\%_auto\] {
-    grid-template-columns: 30% auto;
-  }
-  .grid-cols-\[40\%_auto\] {
-    grid-template-columns: 40% auto;
-  }
-  .grid-rows-1 {
-    grid-template-rows: repeat(1, minmax(0, 1fr));
   }
   .flex-col {
     flex-direction: column;
@@ -536,6 +497,14 @@
     border-right-width: 1px;
   }
   .border-b {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 1px;
+  }
+  .border-b-\[1\] {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 1;
+  }
+  .border-b-\[1px\] {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
   }
@@ -670,9 +639,6 @@
   .p-\[6px_8px\] {
     padding: 6px 8px;
   }
-  .p-\[8px\] {
-    padding: 8px;
-  }
   .p-\[8px_12px\] {
     padding: 8px 12px;
   }
@@ -682,41 +648,14 @@
   .p-\[8px_50px\] {
     padding: 8px 50px;
   }
-  .p-\[8px_60px\] {
-    padding: 8px 60px;
-  }
-  .p-\[8px_\] {
-    padding: 8px ;
-  }
-  .p-\[8px_px\] {
-    padding: 8px px;
-  }
   .p-\[9px_16px_9px_56px\] {
     padding: 9px 16px 9px 56px;
-  }
-  .p-\[10\] {
-    padding: 10;
   }
   .p-\[10px\] {
     padding: 10px;
   }
-  .p-\[10px_6px\] {
-    padding: 10px 6px;
-  }
-  .p-\[10px_60px\] {
-    padding: 10px 60px;
-  }
-  .p-\[10px_65px\] {
-    padding: 10px 65px;
-  }
   .p-\[12px\] {
     padding: 12px;
-  }
-  .p-\[12px_65px\] {
-    padding: 12px 65px;
-  }
-  .p-\[12px_70px\] {
-    padding: 12px 70px;
   }
   .p-\[20px\] {
     padding: 20px;
@@ -724,14 +663,8 @@
   .p-\[40px\] {
     padding: 40px;
   }
-  .p-\[200px\] {
-    padding: 200px;
-  }
   .px-1 {
     padding-inline: calc(var(--spacing) * 1);
-  }
-  .px-2 {
-    padding-inline: calc(var(--spacing) * 2);
   }
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
@@ -748,23 +681,8 @@
   .px-9 {
     padding-inline: calc(var(--spacing) * 9);
   }
-  .px-\[1px\] {
-    padding-inline: 1px;
-  }
-  .px-\[10px\] {
-    padding-inline: 10px;
-  }
   .px-\[12px\] {
     padding-inline: 12px;
-  }
-  .px-\[28px\] {
-    padding-inline: 28px;
-  }
-  .px-\[56px\] {
-    padding-inline: 56px;
-  }
-  .px-\[px\] {
-    padding-inline: px;
   }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
@@ -772,20 +690,17 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
+  .py-5 {
+    padding-block: calc(var(--spacing) * 5);
+  }
+  .py-10 {
+    padding-block: calc(var(--spacing) * 10);
+  }
   .py-14 {
     padding-block: calc(var(--spacing) * 14);
   }
-  .py-\[1px\] {
-    padding-block: 1px;
-  }
   .py-\[10px\] {
     padding-block: 10px;
-  }
-  .py-\[12px\] {
-    padding-block: 12px;
-  }
-  .py-\[16px\] {
-    padding-block: 16px;
   }
   .py-\[17px\] {
     padding-block: 17px;
@@ -795,12 +710,6 @@
   }
   .py-\[50px\] {
     padding-block: 50px;
-  }
-  .py-\[200px\] {
-    padding-block: 200px;
-  }
-  .pt-3 {
-    padding-top: calc(var(--spacing) * 3);
   }
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
@@ -822,9 +731,6 @@
   }
   .pt-15 {
     padding-top: calc(var(--spacing) * 15);
-  }
-  .pt-\[10px\] {
-    padding-top: 10px;
   }
   .pt-\[200px\] {
     padding-top: 200px;
@@ -878,12 +784,6 @@
   }
   .text-\[1\.2rem\] {
     font-size: 1.2rem;
-  }
-  .text-\[1\.3rem\] {
-    font-size: 1.3rem;
-  }
-  .text-\[1px\] {
-    font-size: 1px;
   }
   .text-\[1rem\] {
     font-size: 1rem;
@@ -969,14 +869,8 @@
   .text-\[\#ccc\] {
     color: #ccc;
   }
-  .text-\[1\] {
-    color: 1;
-  }
   .text-\[blue\] {
     color: blue;
-  }
-  .text-\[rem\] {
-    color: rem;
   }
   .text-\[rgba\(0\,0\,0\,0\.7\)\] {
     color: rgba(0,0,0,0.7);
@@ -997,6 +891,10 @@
     --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
+  .shadow-sm {
+    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
   .shadow-xl {
     --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 8px 10px -6px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -1010,13 +908,13 @@
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
-  .transition-all {
-    transition-property: all;
+  .transition-colors {
+    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
-  .transition-colors {
-    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
+  .transition-shadow {
+    transition-property: box-shadow;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
@@ -1030,14 +928,6 @@
   .duration-300 {
     --tw-duration: 300ms;
     transition-duration: 300ms;
-  }
-  .duration-1000 {
-    --tw-duration: 1000ms;
-    transition-duration: 1000ms;
-  }
-  .duration-10000 {
-    --tw-duration: 10000ms;
-    transition-duration: 10000ms;
   }
   .ease-in-out {
     --tw-ease: var(--ease-in-out);
@@ -1084,11 +974,6 @@
   .placeholder\:text-\[16px\] {
     &::placeholder {
       font-size: 16px;
-    }
-  }
-  .placeholder\:text-\[17px\] {
-    &::placeholder {
-      font-size: 17px;
     }
   }
   .placeholder\:text-\[\#ccc\] {
@@ -1165,21 +1050,6 @@
       justify-content: flex-end;
     }
   }
-  .xss\:p-\[10px_65px\] {
-    @media (width >= 200px) {
-      padding: 10px 65px;
-    }
-  }
-  .xss\:px-\[56px\] {
-    @media (width >= 200px) {
-      padding-inline: 56px;
-    }
-  }
-  .xs\:flex {
-    @media (width >= 358px) {
-      display: flex;
-    }
-  }
   .xs\:inline-block {
     @media (width >= 358px) {
       display: inline-block;
@@ -1200,39 +1070,9 @@
       flex-direction: row;
     }
   }
-  .xs\:items-center {
-    @media (width >= 358px) {
-      align-items: center;
-    }
-  }
-  .xs\:justify-end {
-    @media (width >= 358px) {
-      justify-content: flex-end;
-    }
-  }
-  .xs\:p-\[10px_0px\] {
-    @media (width >= 358px) {
-      padding: 10px 0px;
-    }
-  }
   .xs\:p-\[10px_65px\] {
     @media (width >= 358px) {
       padding: 10px 65px;
-    }
-  }
-  .xs\:p-\[10px_70px\] {
-    @media (width >= 358px) {
-      padding: 10px 70px;
-    }
-  }
-  .xs\:p-\[12px_65px\] {
-    @media (width >= 358px) {
-      padding: 12px 65px;
-    }
-  }
-  .xs\:p-\[12px_70px\] {
-    @media (width >= 358px) {
-      padding: 12px 70px;
     }
   }
   .xs\:p-\[12px_95px\] {
@@ -1240,19 +1080,9 @@
       padding: 12px 95px;
     }
   }
-  .xs\:px-\[56px\] {
-    @media (width >= 358px) {
-      padding-inline: 56px;
-    }
-  }
   .xs\:py-\[130px\] {
     @media (width >= 358px) {
       padding-block: 130px;
-    }
-  }
-  .xs\:text-center {
-    @media (width >= 358px) {
-      text-align: center;
     }
   }
   .xs\:text-xl {
@@ -1264,11 +1094,6 @@
   .xs\:text-\[1\.3rem\] {
     @media (width >= 358px) {
       font-size: 1.3rem;
-    }
-  }
-  .xs\:text-\[1\.4rem\] {
-    @media (width >= 358px) {
-      font-size: 1.4rem;
     }
   }
   .xs\:text-\[16px\] {
@@ -1284,11 +1109,6 @@
   .xs\:text-\[18px\] {
     @media (width >= 358px) {
       font-size: 18px;
-    }
-  }
-  .xs\:text-\[1\.rem\] {
-    @media (width >= 358px) {
-      color: 1.rem;
     }
   }
   .sm\:left-\[-30px\] {
@@ -1329,16 +1149,6 @@
   .sm\:bg-\[url\(\/Images\/Netflix-background\.jpg\)\] {
     @media (width >= 601px) {
       background-image: url(/Images/Netflix-background.jpg);
-    }
-  }
-  .sm\:px-\[56px\] {
-    @media (width >= 601px) {
-      padding-inline: 56px;
-    }
-  }
-  .sm\:text-center {
-    @media (width >= 601px) {
-      text-align: center;
     }
   }
   .sm\:text-lg {
